// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.YoutubeVideo autoPlay=false 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo autoPlay=true 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo className="my-classname" 1`] = `
<Span
  className="uu5-bricks-youtube-video my-classname"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video my-classname uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo className="test-classname" 1`] = `
<Span
  className="uu5-bricks-youtube-video test-classname"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video test-classname uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo controlled=false 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo controlled=true 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo default props 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disableControls=false 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disableControls=true 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disableFullscreen=false 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disableFullscreen=true 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disableInfo=false 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disableInfo=true 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disableRelatedVideos=false 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disableRelatedVideos=true 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disabled=false 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disabled=false 3`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disabled=true 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  disabled={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-common-disabled uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disabled=true 3`] = `
<Span
  className="uu5-bricks-youtube-video"
  disabled={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-common-disabled uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo docKit examples UU5.Bricks.YoutubeVideo should render without crash 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID08-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-s"
    id="uuID08"
    src="https://youtube.com/embed/1rDVz_Fb6HQ?"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo fullTextSearchPriority=0 1`] = `
<Span
  className="uu5-bricks-youtube-video uu-fulltextsearch-0"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu-fulltextsearch-0 uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo fullTextSearchPriority=0 2`] = `
<Span
  className="uu5-bricks-youtube-video uu-fulltextsearch-0"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu-fulltextsearch-0 uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo hidden=false 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo hidden=false 3`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo hidden=true 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-common-hidden uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo hidden=true 3`] = `
<Span
  className="uu5-bricks-youtube-video"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-common-hidden uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo id="myId" 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="myId-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="myId"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo id="test-id" 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="test-id-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="test-id"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo loop=false 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo loop=true 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo mainAttrs=undefined 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo name="myName" 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  name="myName-inner"
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    name="myName"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel="bigBox" 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBox"
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel="bigBoxCollection" 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel="box" 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="box"
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel="box" 3`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="box"
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel="boxCollection" 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="boxCollection"
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel="inline" 1`] = `
<UU5.BricksEditable.InlineMode
  Component={[Function]}
  component={
    Object {
      "__isMounted": true,
      "_isMounted": true,
      "context": Object {},
      "id": "uuID",
      "mixinRegister": Array [
        "UU5.Common.BaseMixin",
        "UU5.Common.PureRenderMixin",
        "UU5.Common.ElementaryMixin",
        "UU5.Common.NestingLevelMixin",
      ],
      "props": Object {
        "autoplay": undefined,
        "className": null,
        "controlled": true,
        "disableControls": undefined,
        "disableFullscreen": undefined,
        "disableInfo": undefined,
        "disableRelatedVideos": undefined,
        "disabled": false,
        "fullTextSearchPriority": undefined,
        "hidden": false,
        "id": "uuID",
        "loop": undefined,
        "mainAttrs": null,
        "muted": undefined,
        "name": null,
        "nestingLevel": "inline",
        "parent": null,
        "pureRender": false,
        "ref_": null,
        "selected": false,
        "size": "m",
        "src": "",
        "style": null,
        "tooltip": null,
      },
      "refs": Object {},
      "state": Object {
        "disabled": false,
        "hidden": false,
        "nestingLevel": null,
        "selected": false,
      },
      "tagName": "UU5.Bricks.YoutubeVideo",
    }
  }
  linkTitle=""
  modalHeader="YoutubeVideo"
/>
`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel="inline" 3`] = `
<UU5.BricksEditable.InlineMode
  Component={[Function]}
  component={
    Object {
      "__isMounted": true,
      "_isMounted": true,
      "context": Object {},
      "id": "uuID",
      "mixinRegister": Array [
        "UU5.Common.BaseMixin",
        "UU5.Common.PureRenderMixin",
        "UU5.Common.ElementaryMixin",
        "UU5.Common.NestingLevelMixin",
      ],
      "props": Object {
        "autoplay": undefined,
        "className": null,
        "controlled": true,
        "disableControls": undefined,
        "disableFullscreen": undefined,
        "disableInfo": undefined,
        "disableRelatedVideos": undefined,
        "disabled": false,
        "fullTextSearchPriority": undefined,
        "hidden": false,
        "id": "uuID",
        "loop": undefined,
        "mainAttrs": null,
        "muted": undefined,
        "name": null,
        "nestingLevel": "inline",
        "parent": null,
        "pureRender": false,
        "ref_": null,
        "selected": false,
        "size": "m",
        "src": "",
        "style": null,
        "tooltip": null,
      },
      "refs": Object {},
      "state": Object {
        "disabled": false,
        "hidden": false,
        "nestingLevel": null,
        "selected": false,
      },
      "tagName": "UU5.Bricks.YoutubeVideo",
    }
  }
  linkTitle=""
  modalHeader="YoutubeVideo"
/>
`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel="page" 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="page"
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel="smallBox" 1`] = `
<UU5.BricksEditable.InlineMode
  Component={[Function]}
  component={
    Object {
      "__isMounted": true,
      "_isMounted": true,
      "context": Object {},
      "id": "uuID",
      "mixinRegister": Array [
        "UU5.Common.BaseMixin",
        "UU5.Common.PureRenderMixin",
        "UU5.Common.ElementaryMixin",
        "UU5.Common.NestingLevelMixin",
      ],
      "props": Object {
        "autoplay": undefined,
        "className": null,
        "controlled": true,
        "disableControls": undefined,
        "disableFullscreen": undefined,
        "disableInfo": undefined,
        "disableRelatedVideos": undefined,
        "disabled": false,
        "fullTextSearchPriority": undefined,
        "hidden": false,
        "id": "uuID",
        "loop": undefined,
        "mainAttrs": null,
        "muted": undefined,
        "name": null,
        "nestingLevel": "smallBox",
        "parent": null,
        "pureRender": false,
        "ref_": null,
        "selected": false,
        "size": "m",
        "src": "",
        "style": null,
        "tooltip": null,
      },
      "refs": Object {},
      "state": Object {
        "disabled": false,
        "hidden": false,
        "nestingLevel": null,
        "selected": false,
      },
      "tagName": "UU5.Bricks.YoutubeVideo",
    }
  }
  linkTitle=""
  modalHeader="YoutubeVideo"
/>
`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel="smallBoxCollection" 1`] = `
<UU5.BricksEditable.InlineMode
  Component={[Function]}
  component={
    Object {
      "__isMounted": true,
      "_isMounted": true,
      "context": Object {},
      "id": "uuID",
      "mixinRegister": Array [
        "UU5.Common.BaseMixin",
        "UU5.Common.PureRenderMixin",
        "UU5.Common.ElementaryMixin",
        "UU5.Common.NestingLevelMixin",
      ],
      "props": Object {
        "autoplay": undefined,
        "className": null,
        "controlled": true,
        "disableControls": undefined,
        "disableFullscreen": undefined,
        "disableInfo": undefined,
        "disableRelatedVideos": undefined,
        "disabled": false,
        "fullTextSearchPriority": undefined,
        "hidden": false,
        "id": "uuID",
        "loop": undefined,
        "mainAttrs": null,
        "muted": undefined,
        "name": null,
        "nestingLevel": "smallBoxCollection",
        "parent": null,
        "pureRender": false,
        "ref_": null,
        "selected": false,
        "size": "m",
        "src": "",
        "style": null,
        "tooltip": null,
      },
      "refs": Object {},
      "state": Object {
        "disabled": false,
        "hidden": false,
        "nestingLevel": null,
        "selected": false,
      },
      "tagName": "UU5.Bricks.YoutubeVideo",
    }
  }
  linkTitle=""
  modalHeader="YoutubeVideo"
/>
`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel="spa" 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="spa"
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo noPrint=false 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo noPrint=true 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo pureRender=false 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo pureRender=true 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
  pureRender={true}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo selected=false 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo selected=true 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
  selected={true}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-common-selected uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo size="l" 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-l"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo size="m" 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo size="s" 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo size="xl" 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-xl"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo src="https://www.youtube.com/watch?v=xfG15i_uQvc" 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    src="https://youtube.com/embed/xfG15i_uQvc?"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo style="padding:8px; borderRadius: 2px" 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={
      Object {
        "borderRadius": "2px",
        "padding": "8px",
      }
    }
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo style={"backgroundColor":"red","color":"blue"} 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={
      Object {
        "backgroundColor": "red",
        "color": "blue",
      }
    }
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo style={"margin":8} 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel={null}
  style={
    Object {
      "margin": 8,
    }
  }
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={
      Object {
        "margin": 8,
      }
    }
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo tooltip="My Tooltip" 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  id="uuID-inner"
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  nestingLevel={null}
  tooltip="My Tooltip"
>
  <iframe
    allowFullScreen={true}
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title="My Tooltip"
  />
</Span>
`;
